--- a/pom.xml
+++ b/pom.xml
@@ -41,11 +41,22 @@
 	<build>
 		<plugins>
 			<plugin>
-				<groupId>org.springframework.boot</groupId>
-				<artifactId>spring-boot-maven-plugin</artifactId>
-			</plugin>
+    <groupId>org.springframework.boot</groupId>
+    <artifactId>spring-boot-maven-plugin</artifactId>
+    <executions>
+        <execution>
+            <goals>
+                <goal>repackage</goal>
+            </goals>
+            <configuration>
+                <mainClass>com.anjawanj.DockerMavenImage.DockerMavenImageApplication</mainClass>
+                <outputDirectory>${project.basedir}/docker</outputDirectory>
+            </configuration>
+        </execution>
+    </executions>
+</plugin>
 			
-			<plugin>
+		<!--  	<plugin>
                 <groupId>com.spotify</groupId>
                 <artifactId>dockerfile-maven-plugin</artifactId>
                 <version>1.3.6</version>
@@ -56,8 +67,9 @@
                     </buildArgs>
                 </configuration>
 			</plugin>
+			-->
 			
-			 <plugin>
+		<!--  	 <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-dependency-plugin</artifactId>
                 <executions>
@@ -79,6 +91,8 @@
                     </execution>
                 </executions>
 			</plugin>
+			
+		-->
 			
 		</plugins>
 	</build>
