--- a/pom.xml
+++ b/pom.xml
@@ -9,13 +9,13 @@
 	<packaging>jar</packaging>
 
 	<name>DockerMavenImage</name>
-	<description>Demo project for Spring Boot</description>
+	<description>Demo project for Spring Boot and Docker</description>
 
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
 		<version>2.0.5.RELEASE</version>
-		<relativePath/> <!-- lookup parent from repository -->
+		<relativePath/> 
 	</parent>
 
 	<properties>
